- Fixed escaping SQL identifiers
- Added html5 input file attribute accept "allowed-file-types" (e.g. accept "image/*")
- Validation file size and type ond client and server
- Added FILESTORAGE.HASH
- Added Form->loadFiles(): after loading you can access file information in template as {file."param"} e.g. {file.ORIGNAME}
- Added template tag modifiers {field.int_value}, {field.string_value} (for escaping in javascript code)
- Template variables such as {@baseurl}
- Tpl->setAttr(), Tpl->htmlTag() clean-up
- Added javascript function pclib.initLinks() which enable ajax links

3.0.0
- Logger: optimized, list of user agents updated
- Added Tree->auth, Tree->map()
- AuthConsole messages improved, added role +right command
- Added Router->index and '/self' route
- Debugbar (App->debugMode) rewritten
- Added column AUTHOR_ID into tables AUTH_USERS, AUTH_ROLES
- Added class Str - string utilities (PHP extension 'mbstring' is required)
- Configuration: changed pclib.errors config parameters to boolean
- possibility disable pclib error handler with 'pclib.errors' => ['display' => 'php'] in config
- fixed PHP 8.2 support

3.1.0
- Improved debugbar (show errors, added eval window)
- Various small improvements (logger filter, pclib.init() function, added job_params)
- Controller->template() return form or grid object for templates with name *_form.tpl or *_grid.tpl
- Tree->add() - add tree node into Tree
- Extend size of some database fields
- Bugfixes

3.1.1
- Default db engine changed to InnoDB
- Added AuthUser::find()
- Added FileStorage->setFile() with $file['CONTENT']
- Bugfixes

3.2.0
- Added service Mailer (sending mails /using phpmailer by default/)
- Modified configuration of services
- Modified configuration of pclib.app, pclib.paths
- Added Db->template() /and "cms" modul in padmin/
- Removed some unused features - logger disabled and categories filter, App->addConfig() with array parameter
- PHP8 bugfixes